--- a/LEB/Layout/MainLayout.razor
+++ b/LEB/Layout/MainLayout.razor
@@ -1,3 +1,28 @@
 ﻿@inherits LayoutComponentBase
 
-@Body
+<div class="page">
+    <main>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark top-0 start-0 w-100 position-fixed">
+            <div class="container-fluid d-flex justify-content-between">
+                <div class="navbar-brand d-flex align-items-center">
+                    <img src="images/logo.jpg" alt="Logo" height="30" style="border-radius: 5px; transition: transform 0.3s ease;" class="logo-hover" />
+                </div>
+                <div class="d-flex align-items-center mx-auto">
+                    <span class="text-white" style="font-family: Bahnschrift; font-size: 20px; font-weight: bold;">Les notes d'ElieBaba</span>
+                </div>
+            </div>
+        </nav>
+        <article class="content px-4">
+            @Body
+        </article>
+    </main>
+</div>
+
+<style>
+    .logo-hover:hover {
+        transform: scale(1.2);
+    }
+    .navbar {
+        z-index: 9999;
+    }
+</style>
