Added the DockerFiles and the Docker-compose.

--- a/LEB/Pages/Home.razor
+++ b/LEB/Pages/Home.razor
@@ -205,8 +205,8 @@
     private string _selectedSummary = string.Empty;
 
 
-    private string _apiUrl = "https://localhost:7292/api/notes";
-    private string _llmApiUrl = "https://localhost:7292/api/LLMHandler";
+    private string _apiUrl = "http://localhost:7292/api/notes";
+    private string _llmApiUrl = "http://localhost:7292/api/LLMHandler";
 
     private BlazoredTextEditor _richEditor = default!;
 
